Alignment correction

--- a/style_index.css
+++ b/style_index.css
@@ -965,7 +965,6 @@ footer a:hover {
   }
 
   .hebergement_list p {
-    margin-left: 30px;
     margin-top: 30px;
     width: 100%;
   }
